# novel-words-dict

./: .gitignore  LICENSE  README.md  editor.html  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
dict/: book-YYZZ.json  book-酉阳杂俎.json  china-given.json  china-people.json  china-place.json  china-surname.json  dict-orders.json  east-faction.json  east-female.json  east-male.json  east-myth.json  east-netural.json  east-place.json  east-surname.json  game-DND.json  game-ELDEN RING.json  game-ER.json  items.json  japan-given.json  japan-surname.json  legend-ARTHUR.json  monster.json  nickname.json  novel-ASOIAF.json  novel-DL.json  novel-DRAGONLANCE.json  novel-LOR.json  novel-LORD OF RINGS.json  novel-OTHERS.json  novel-SGAS.json  novel-TCOA.json  novel-钢铁火药和施法者.json  others.json  people.json  skills.json  title.json  west-book.json  west-creature.json  west-faction.json  west-female.json  (+11 more)
docs/: manual-release.md
scripts/: build-builtin-db.mjs  bump-version.mjs  clean-custom-bundled-duplicates.mjs  (+6 more)
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: bootstrap.rs  mod.rs  state.rs
src-tauri/src/app/commands/: editor.rs  entries.rs  mod.rs  settings.rs
src-tauri/src/app/platform/: hotkey.rs  mod.rs  tray.rs
src-tauri/src/core/: filter.rs  mod.rs  sort.rs  text.rs  types.rs
src-tauri/src/infra/: files.rs  mod.rs  paths.rs  settings.rs
src-tauri/src/store/: dictionary.rs  entry_store.rs  mod.rs  query.rs
(+24 files in other folders)
